<resources>
    <string name="app_name">ScanMate</string>
    <string name="retrofit_logging_request">Sending request %s on %s%n%s%s</string>
    <string name="retrofit_request_method_type"> Method </string>
    <string name="retrofit_logging_response">Received response for %s in %.1fms%n%s</string>
    <string name="enter_username">Enter userId</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="do_not_have_account">Do not have account?</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="features">Features</string>
    <string name="scan_qr_code">Scan the QR code</string>
    <string name="scan_item">Scan Item</string>
    <string name="update_item">Update Item</string>
    <string name="cancel">Cancel</string>
    <string name="scan_item_product">Scan the code on the product</string>
    <string name="add_or_update_product">Add or update product</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_details">Add your product details</string>
    <string name="enter_location">Enter item location</string>
    <string name="enter_batch_no">Enter item batch number</string>
    <string name="enter_expiry_date">Enter item expiry date</string>
    <string name="enter_mfg_date">Enter item mfg date</string>
    <string name="enter_quantity">Enter item quantity</string>
    <string name="your_products">Your Products</string>
    <string name="update_products">Update Product</string>
    <string name="update_product_details">Update your product details</string>
    <string name="field_must_be_empty">Field must be empty</string>
    <string name="scan_product">Scan Product</string>
    <string name="ok">OK</string>
    <string name="useYourBiometricsKey">Use your biometrics</string>
    <string name="unlockWithBiometricsTitleKey">Unlock with your biometric</string>
    <string name="unlockWithBiometricsSubtitleKey">Use your fingerprint or your face unlock to unlock the app with ease.</string>
    <string name="confirmYourBiometricsKey">Confirm your biometrics</string>
    <string name="cancelKey">Cancel</string>
    <string name="business">Business</string>
    <string name="warehouse">Warehouse</string>
    <string name="addCarton">Place carton</string>
    <string name="racks">Racks</string>
    <string name="shelfs">Shelfs</string>
    <string name="pallets">Pallets</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="addWarehouse">Add Warehouse</string>
    <string name="tap">Add Warehouse</string>
    <string name="done">Done</string>

<!--    <string-array name="places">-->
<!--        <item>Select business location</item>-->
<!--        <item>Plant I</item>-->
<!--        <item>Plant II</item>-->
<!--        <item>Plant III</item>-->
<!--    </string-array>-->

<!--    <string-array name="warehouse">-->
<!--        <item>Select warehouse</item>-->
<!--        <item>warehouse I</item>-->
<!--        <item>warehouse II</item>-->
<!--        <item>warehouse III</item>-->
<!--    </string-array>-->

<!--    <string-array name="rackSpinner">-->
<!--        <item>Select racks</item>-->
<!--        <item>rack I ( R1 )</item>-->
<!--        <item>rack II ( R2 )</item>-->
<!--        <item>rack III ( R2 )</item>-->
<!--    </string-array>-->

<!--    <string-array name="shelfSpinner">-->
<!--        <item>Select shelf</item>-->
<!--        <item>shelf I</item>-->
<!--        <item>shelf II</item>-->
<!--        <item>shelf III</item>-->
<!--    </string-array>-->

<!--    <string-array name="palletSpinner">-->
<!--        <item>Select pallet</item>-->
<!--        <item>pallet I</item>-->
<!--        <item>pallet II</item>-->
<!--        <item>pallet III</item>-->
<!--    </string-array>-->

</resources>