<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MenuActivity"
    android:background="@color/royal_blue">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/amiko"
        android:text="Muhammad Zohaib Hassan"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deptTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerTV"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_30sdp"
        android:fontFamily="@font/amiko"
        android:text="IT Department"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerTV"
        android:layout_marginTop="50dp"
        android:background="@drawable/top_rounded_white_bg"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/busSpinnerCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardElevation="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/businessSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/places"/>

        </androidx.cardview.widget.CardView>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/busSpinnerCont"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/warehouseIV"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_10sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:src="@drawable/warehouse_icon" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:fontFamily="@font/amiko"
                            android:text="@string/warehouse"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15ssp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/racksIV"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_10sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:src="@drawable/racks" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:fontFamily="@font/amiko"
                            android:text="@string/racks"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15ssp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/shelfIV"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_below="@id/warehouseIV"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:src="@drawable/shelve" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:fontFamily="@font/amiko"
                            android:text="@string/shelfs"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15ssp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/palletsIV"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_below="@id/racksIV"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_5sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:src="@drawable/pallet" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:fontFamily="@font/amiko"
                            android:text="@string/pallets"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15ssp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/placeCartonIV"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_below="@+id/shelfIV"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardElevation="@dimen/_10sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:src="@drawable/carton" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:fontFamily="@font/amiko"
                            android:text="@string/addCarton"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15ssp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>



</RelativeLayout>